开始尝试 数字识别

--- a/src/locale/en-us.json
+++ b/src/locale/en-us.json
@@ -7,6 +7,6 @@
   },
   "leftMenu": {
     "homepage": "HomePage",
-    "test": "Test"
+    "digitRecognition": "Handwritten digit recognition"
   }
 }
